third_party/move/move-compiler-v2/tests/reference-safety/freeze_aliasing.exp

Diagnostics:
error: cannot freeze local `_z` which is still mutably borrowed
  ┌─ tests/reference-safety/freeze_aliasing.move:7:18
  │
5 │         let r = &mut x;
  │                 ------ previously mutably borrowed here
6 │         let y = &mut x;
7 │         let _z = freeze(y);
  │                  ^^^^^^^^^ frozen here
8 │         *r = 4;
  │         ------ conflicting reference `r` used here

error: cannot freeze value which is still mutably borrowed
   ┌─ tests/reference-safety/freeze_aliasing.move:31:48
   │
31 │         *vector::borrow_mut(r, *vector::borrow(r, 1)) = 4;
   │          --------------------------------------^-----
   │          │                  │                  │
   │          │                  │                  implicitly frozen here
   │          │                  previously mutably borrowed here
   │          conflicting reference used here
